create Job Summary component

--- a/job-post.html
+++ b/job-post.html
@@ -9,79 +9,68 @@
 </head>
 <body>
 <div id="site-container">
-    <page-container>
+<page-container>
 
-        <page-header
-                header-style="light"
-                background-image="false"
-        ></page-header>
+    <page-header
+            header-style="light"
+            background-image="false"
+    ></page-header>
 
 
-        <div>
-            <h3 class="common-header">Prison officer</h3>
-        </div>
+    <text-block>
+        <h3 class="common-header">Prison officer</h3>
+    </text-block>
 
-        <div class="call-to-action">
-            <ul class="call-to-action__list">
-                <li class="call-to-action__list-element"><a href="">Apply</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <h4 class="common-header-small">Sense of belonging</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-        </div>
-
-        <div class="l-full">
-            <text-image-block
-                    my-title="Prison officer"
-                    text="Apply for a job, join a service"
-                    img-url="/public/img/022T0134_preview.jpg"
-            >
-            </text-image-block>
-        </div>
-
-        <div class="l-full">
-            <div class="l-half">
-
+    <text-block>
+        <div class="search__job-post">
+            <!--<div class="search__job-post-distance">0.88 miles</div>-->
+            <!--<div class="search__job-post-position">Prison Officer</div>-->
+            <div class="search__job-post-salary">£31,560</div>
+            <div class="search__job-post-prison">
+                <div class="search__job-post-prison-name">HMP Belmarsh</div>
+                <div class="search__job-post-prison-city">London</div>
             </div>
-            <div class="l-half">
-                <text-image-block
-                        quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
-                        img-url="http://via.placeholder.com/140x100"
-                >
-                </text-image-block>
-            </div>
+            <a href="/job-post.html" class="search__job-post-link">view job</a>
         </div>
+    </text-block>
 
-        <div class="l-full">
-            <div class="l-half">
+    <div class="call-to-action">
+        <ul class="call-to-action__list">
+            <li class="call-to-action__list-element"><a href="">Apply</a></li>
+        </ul>
+    </div>
 
-            </div>
-            <div class="l-half">
-                <div class="text-and-image text-and-image" >
-                    <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
-                    <h3 class="text-and-image__quote">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</h3>
-                    <div class="text-and-image__image"></div>
-                </div>
-            </div>
-        </div>
+    <text-block>
+        <h4 class="common-header-small">Salary</h4>
+        <p>£29,981 starting salary a year based on a 39 hour working week, with potential to earn more depending on contract hours and overtime. The standard working week for a prison officer is based on 37 hours. Working 39 hours is dependent on completing training and opting in to a 39 hour week.</p>
 
+        <h4 class="common-header-small">About the role</h4>
+        <p>Being a prison officer is a big responsibility. So, it’s only right that we give you the right recognition and rewards for what you do.</p>
+        <p>That’s why, alongside the attractive starting salary, civil service pension and 25 days’ annual holiday (pro rata), there are many other options and benefits on offer. We want to make sure you receive the rewards you deserve.</p>
+        <p>You’ll have access to childcare vouchers, opportunities to earn more through paid overtime, a civil service pension, annual season ticket loans, a free gym, a variety of exclusive discounts, free parking and Our Give As You Earn scheme.</p>
+        <p>Working in a prison is fast-paced and varied. It’s an interesting and rewarding career, with training, professional qualifications and career progression.</p>
+        <p>From day-one, you will be fully supported by our Prison Officer mentors and a wide ranging support team. We pride ourselves on being a team that stands side by side, based on the knowledge that only by working together can we run a safe, decent prison where it is possible for prisoners to change their lives.</p>
+        <p><a href="">Find out more about HMP Belmarsh</a></p>
 
+        <h4 class="common-header-small">Working for the Civil Service</h4>
+        <p>The Civil Service Code sets out the standards of behaviour expected of civil servants, you can read more about it here [https://www.gov.uk/government/publications/ civil-service-code/the-civil-service-code].</p>
+        <p>The Civil Service embraces diversity and promotes equality of opportunity. We recruit by merit on the basis of fair and open competition, as outlined in the Civil Service Commission's recruitment principles.</p>
+        <p>There is a guaranteed interview scheme (GIS) for candidates with disabilities who meet the minimum selection criteria.</p>
 
+    </text-block>
 
+    <text-image-block
+            quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
+            img-url="http://via.placeholder.com/140x100"
+    >
+    </text-image-block>
 
-        <text-block my-title="Working as a probation officer">
-            <p>Find out everything you need to know about working as a probation officer</p>
-            <a class='text-block__link'>Visit Probation jobs</a>
-        </text-block>
+    <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
 
-        <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
+    <search></search>
 
-        <search></search>
-
-        <contact></contact>
-    </page-container>
+    <contact></contact>
+</page-container>
 </div>
 </body>
 </html>
