styled call to action on job post page

--- a/job-post.html
+++ b/job-post.html
@@ -58,6 +58,13 @@
 
     </text-block>
 
+    <div class="call-to-action call-to-action--tight">
+        <ul class="call-to-action__list">
+            <li class="call-to-action__list-element"><a href="">Eligibility checker</a></li>
+            <li class="call-to-action__list-element"><a href="">Application steps</a></li>
+        </ul>
+    </div>
+
     <text-image-block
             quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
             img-url="http://via.placeholder.com/140x100"
