including temporary basic auth for heroku username: papj, password: pass

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Prison & Probation Jobs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <script src="public/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
 <div id="site-container">
@@ -15,8 +15,8 @@
 
     <div class="call-to-action">
         <ul class="call-to-action__list">
-            <li class="call-to-action__list-element"><a href="/apply.html">Apply</a></li>
-            <li class="call-to-action__list-element"><a href="/role.html">About the role</a></li>
+            <li class="call-to-action__list-element"><a href="apply.html">Apply</a></li>
+            <li class="call-to-action__list-element"><a href="role.html">About the role</a></li>
             <li class="call-to-action__list-element"><a href="">Search</a></li>
         </ul>
     </div>
@@ -25,7 +25,7 @@
         <text-image-block
                 my-title="Prison officer"
                 text="Apply for a job, join a service"
-                img-url="/public/img/022T0134_preview.jpg"
+                img-url="/img/022T0134_preview.jpg"
         >
         </text-image-block>
     </div>
