--- a/src/html/job-post.html
+++ b/src/html/job-post.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Prison & Probation Jobs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <script src="public/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
 <div id="site-container">
@@ -29,7 +29,7 @@
                 <div class="search__job-post-prison-name">HMP Belmarsh</div>
                 <div class="search__job-post-prison-city">London</div>
             </div>
-            <a href="/job-post.html" class="search__job-post-link">view job</a>
+            <a href="/src/html/job-post.html" class="search__job-post-link">view job</a>
         </div>
     </text-block>
 
