--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Prison & Probation Jobs - apply</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel="stylesheet" type="text/css" href="public/css/main.css">
-    <script src="public/js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
 <div id="site-container">
