--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
 <div id="site-container">
 <page-container>
 
-    <page-header>You, at your best<br>Be a prison officer</page-header>
+    <page-header>You, at your best<br/>Be a prison officer</page-header>
 
     <div class="call-to-action">
         <ul class="call-to-action__list">
