created 'inlaid-text' style for text-image-blocks

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,7 @@
             >
         </text-block> 
         <text-image-block
+                type="inlaid-text"
                 title="Challenge yourself"
                 text="Working in a prison is unique, it’s not for everyone. You will have to handle different challenges everyday, from keeping order to helping with rehabilitation."
                 img-url="/img/022T0134_preview.jpg"
