Copy for about and apply
Copy for about and apply including:

— video assets, might need embedding properly on apply page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -80,7 +80,7 @@
     <div class="l-half">
         <text-image-block
             quote="Every day we are able to change lives for the better"
-            text="Bev, Governor, HMP Norwich"
+            quote-source="Bev, Governor, HMP Norwich"
             img-url="/img/022T0719.jpg"
         >
         </text-image-block>
