incorporating Emily's design into sass

--- a/src/html/role.html
+++ b/src/html/role.html
@@ -105,9 +105,14 @@
             ></tab>
         </tabs>
 
-        <search></search>
+        <div class="l-full">
+            <search></search>
+        </div>
 
-        <contact></contact>
+        <div class="l-full">
+            <contact></contact>
+        </div>
+
     </page-container>
 </div>
 </body>
