using better placeholder image on apply.html

--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -18,7 +18,7 @@
             <text-image-block
                     main-title="Prison officer"
                     text="Apply for a job, join a service"
-                    img-url="http://via.placeholder.com/140x100"
+                    img-url="/img/article-0-187FC088000005DC-547_306x423 copy.jpg"
             >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.
             </text-image-block>
