--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -139,11 +139,11 @@
         </div>
 
         <div class="l-full">
-            <div class="text-and-image" >
-                <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
-                <h3 class="text-and-image__quote">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</h3>
-                <div class="text-and-image__image"></div>
-            </div>
+            <text-image-block
+                quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
+                img-url="/img/article-0-187FC088000005DC-547_306x423 copy.jpg"
+            >
+            </text-image-block>
         </div>
 
         <div class="l-full">
