--- a/src/html/prison-search.html
+++ b/src/html/prison-search.html
@@ -12,7 +12,7 @@
 <div id="site-container">
     <page-container>
 
-        <page-header carousel-images="/img/header.jpg,/img/header.jpg">Want a new challenge?<br/>We've got your back.</page-header>
+        <page-header carousel-images="/img/header.jpg,/img/022T0134_preview.jpg,img/header.jpg,/img/022T0134_preview.jpg">Want a new challenge?<br/>We've got your back.</page-header>
 
         <div class="l-full">
             <text-block main-title="Search for a prison"
