added header carousel to all html pages

--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -12,7 +12,10 @@
 <div id="site-container">
     <page-container>
 
-        <page-header>I know what I want, I’m ready to apply</page-header>
+        <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
+            I know what I want, I’m ready to apply
+        </page-header>
+
 
         <div class="l-full">
             <text-image-block
