--- a/src/html/hmp-pentonville.html
+++ b/src/html/hmp-pentonville.html
@@ -12,8 +12,9 @@
 <div id="site-container">
     <page-container>
 
-        <page-header>
-            HMP Pentonville<br/>
+
+        <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
+        HMP Pentonville<br/>
             A great place to work
         </page-header>
 
