--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,9 @@
 <div id="site-container">
 <page-container>
 
-    <page-header>You, at your best<br/>Be a prison officer</page-header>
+    <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
+        You, at your best<br/>Be a prison officer
+    </page-header>
 
     <div class="call-to-action">
         <ul class="call-to-action__list">
