--- a/src/html/role.html
+++ b/src/html/role.html
@@ -12,7 +12,10 @@
 <div id="site-container">
     <page-container>
 
-        <page-header>Want a new challenge? We've got your back</page-header>
+
+        <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
+            Want a new challenge?<br/>We've got your back.
+        </page-header>
 
         <role-intro
                 main-title="Prison officer: the role"
