added new content to apply page; styled apply page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,7 +35,7 @@
         <text-image-block
             type="inlaid-text"
             main-title="Challenge yourself"
-            img-url="/img/022T2708.jpg"
+            img-url="/img/12-h61JnTq-copy.jpg"
         >
             Working in a prison is unique, it’s not for everyone. You will have to handle different challenges everyday, from keeping order to helping with rehabilitation.
         </text-image-block>
@@ -43,7 +43,7 @@
     <div class="l-full">
         <text-image-block
             main-title="Get real rewards"
-            img-url="/img/022T0134_preview.jpg"
+            img-url="/img/12-h61JnTq-copy.jpg"
         >
             Turning lives around is hard. You may work behind closed doors, but by creating a safe environment for prisoners you will help build better communities everywhere.
         </text-image-block>
@@ -61,7 +61,7 @@
         <text-image-block
             quote="Working in a prison is no ordinary job, it is a very rewarding career"
             quote-source="Steve, Prison Officer HMP Norwich"
-            img-url="/img/022T2695.jpg"
+            img-url="/img/12-h61JnTq-copy.jpg"
         >
         </text-image-block>
     </div>
@@ -83,7 +83,7 @@
         <text-image-block
             quote="Every day we are able to change lives for the better"
             text="Bev, Governor, HMP Norwich"
-            img-url="/img/022T0719.jpg"
+            img-url="/img/12-h61JnTq-copy.jpg"
         >
         </text-image-block>
     </div>
