--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -13,95 +13,109 @@
     <page-container>
 
         <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
-            I know what I want, I’m ready to apply
+            I know what I <br/>want, I’m <br/> ready to <br> apply
         </page-header>
 
-
         <div class="l-full">
-            <text-image-block
-                    main-title="Prison officer"
-                    text="Apply for a job, join a service"
-                    img-url="/img/article-0-187FC088000005DC-547_306x423 copy.jpg"
+            <text-block
+                    main-title="How to apply"
+                    subtitle="Ready to follow a fast-paced career with real challenges and rewards? Learn how to apply to be a Prison Officer."
             >
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.
-            </text-image-block>
+            </text-block>
         </div>
 
         <div class="l-full">
             <div class="call-to-action">
                 <ul class="call-to-action__list">
-                    <li class="call-to-action__list-element"><a href="">Find a role</a></li>
+                    <li class="call-to-action__list-element"><a href="">Search for prison officer jobs</a></li>
                 </ul>
             </div>
         </div>
 
         <div class="l-full">
-            <accordion
-                title="Eligibility checker"
-                subtitle="Requirements to be a prison officer"
-            >
-                <accordion-element
-                        title="Nationality and residency"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </accordion-element>
-                <accordion-element
-                        title="Age"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </accordion-element>
-                <accordion-element
-                        title="Education"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p><span class="enormous">£28K</span></p>
-                    <div class="medium"><strong>starting salary</strong> for a prison officer on a 39 hour week</div>
-                </accordion-element>
-                <accordion-element
-                        title="Fitness"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </accordion-element>
-                <accordion-element
-                        title="Health"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </accordion-element>
-                <accordion-element
-                        title="Background checks"
-                >
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </accordion-element>
-            </accordion>
+            <text-block main-title="Before you apply">
+
+                <h4>Explore the role</h4>
+
+                <p>Working in a prison brings tough challenges and great rewards: it’s not for everyone.
+                    Before you apply, find out more about the role and what you can expect in your day-to-day work.</p>
+                <a href="">Learn about life as a Prison Officer</a>
+
+
+                <h4>Check you are eligible</h4>
+
+                <p>You must:</p>
+                <ul>
+                    <li>Have a right to work in the UK</li>
+                    <li>Be a UK resident for at least 3 years</li>
+                    <li>Be 18 years old or over</li>
+                    <li>Not be a member of any group of organisation that does not fit with the prison service values of diversity and inclusion</li>
+                </ul>
+                <a href="">See full eligibility requirements</a>
+            </text-block>
+
         </div>
 
         <div class="l-full">
-            <video-player></video-player>
+            <text-block main-title="Prepare for the tests"
+                        subtitle="You don’t need formal qualifications to become a prison officer, although the role offers a great opportunity to use any you do have."
+            >
+                <p>Being a prison officer takes quick thinking, accuracy and the ability to handle intense situations. We test the following through online questionnaires and assessment days.</p>
+
+                <h4>Eyesight</h4>
+                <p>Can you read a car number plate from 10 metres away without wearing glasses or contact lenses?</p>
+
+                <h4></h4>
+                <p></p>
+
+                <h4>Role play</h4>
+                <p>Test yourself to see if you have the skills and characteristics to be a prison officer</p>
+                <video-player></video-player>
+
+                <h4>Fitness</h4>
+                <p>You will need a reasonable level of stamina, strength and fitness to show you can be on your feet all day and handle emergencies.</p>
+                <video-player></video-player>
+
+                <h4>Numeracy</h4>
+                <p>Can you complete basic maths questions to show you can do things like a prisoner headcount?</p>
+                <video-player></video-player>
+            </text-block>
+        </div>
+
+        <div class="l-full">
+            <text-block main-title="Search for Prison Officer jobs">
+                <p>To start your application, you will need to find a job vacancy. Search for prison officer jobs and find the role that’s right for you, including details of the prison, the facilities, benefits and prisoners under your care.</p>
+                <p>
+                    <a href="">See full eligibility requirements</a>
+                </p>
+
+            </text-block>
         </div>
 
         <div class="l-full">
             <ordered-list
-                    title="Application steps"
-                    subtitle="Find out everything you need to know about joining the prison and probation service"
+                    title="The application process"
+                    subtitle="It takes about 30 days to receive a conditional contract if you’re successful,
+                    and up to 4 months before starting your first day on the job."
             >
                 <ol-element
-                        main-text="Complete online application form"
+                        main-text="Apply online"
                         subtext="10 minutes"
                 ></ol-element>
                 <ol-element
-                        main-text="Judgement and numeracy tests"
+                        main-text="Online tests"
                         subtext="24 minutes"
                 ></ol-element>
                 <ol-element
-                        main-text="Notification of pass or failure"
+                        main-text="Test results"
                         subtext="1 day"
                 ></ol-element>
                 <ol-element
-                        main-text="Book prison visit"
+                        main-text="Prison visit"
                         subtext="Up to 3 weeks"
                 ></ol-element>
                 <ol-element
-                        main-text="Recruitment Assessment Day"
+                        main-text="Assessment Day"
                         subtext="1 day"
                 ></ol-element>
                 <ol-element
@@ -111,54 +125,75 @@
             </ordered-list>
         </div>
 
+
         <div class="l-full">
-            <accordion title=""
-                       subtitle=""
-            >
-                <accordion-element title="How long does it take?">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <accordion>
+                <accordion-element
+                        title="Apply online"
+                        subtitle="10 minutes"
+                >
+                    <p>Enter important personal details, such as nationality and your right to work in the UK. We use these to check you’re eligible to be a prison officer.</p>
+                    <p><strong>What you will need:</strong></p>
+                    <p>National Insurance number</p>
+                    <p>Employment history</p>
                 </accordion-element>
-                <accordion-element title="The application process">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <accordion-element
+                        title="Online tests"
+                        subtitle="30 minutes"
+                >
+                    <p>You will be sent 15 multiple choice questions on numeracy and how you would react to certain situations you might face as a prison officer. We use these to check you have the basic qualities to be a prison officer.</p>
                 </accordion-element>
-                <accordion-element title="Assessment day">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p><span class="enormous">£28K</span></p>
-                    <div class="medium"><strong>starting salary</strong> for a prison officer on a 39 hour week</div>
+
+                <accordion-element
+                        title="Test results"
+                        subtitle="1 day"
+                >
+                    <p>We will let you know if you have passed the online test within one day. If you are successful, we invite you to attend a recruitment assessment day (RAD).</p>
+                    <p>We also operate a guaranteed interview scheme for disabled people who meet the minimum criteria for appointment (as defined by the Disability Discrimination Act 1995)</p>
                 </accordion-element>
-                <accordion-element title="Vetting process">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <accordion-element
+                        title="Prison visit"
+                        subtitle="up to 3 weeks"
+                >
+                    <p>You will be invited to visit the prison where you have applied for a job. This is a great chance to meet serving prison officers and see what it’s like to work in the prison. Organising a visit can take up to 3 weeks.</p>
+                    <text-image-block quote="A prison visit is a fantastic opportunity to get a greater understanding of the role"
+                                      quote-source="Simon, Prison Officer, HMP Wayland"
+                                      img-url="/img/article-0-187FC088000005DC-547_306x423 copy.jpg"
+                    ></text-image-block>
+                </accordion-element>
+
+                <accordion-element
+                        title="Assessment day"
+                        subtitle="1 day"
+                >
+                    <p>We will assess whether you have what it takes to be a successful prison officer using a mix of individual, group and online tests. We will give you guidance beforehand on what to expect on the day.</p>
+                    <p><strong>Role play</strong> - three 10-minute simulations you could face as a prison officer.</p>
+                    <p><strong>Written test</strong> - read and answer questions about different scenarios which demonstrate your maths and written English.</p>
+                    <p><strong>Written test</strong> - an eye test, basic health screening, including blood pressure check, and a fitness test of your strength and agility to show you can handle the physical demands of the job.</p>
+                    <p>If you pass the assessment day, we carry out some initial background checks and you will immediately be offered a conditional employment contract.</p>
+                    <p><strong>What you will need</strong></p>
+                    <ul>
+                        <li>Proof of identity, such a passport, driving licence or birth certificate</li>
+                        <li>Proof of address, such as a utility bill or bank statement from the last 3 months</li>
+                        <li>Job references for the last 5 years, including for any employment gaps</li>
+                        <li>Gym clothes and trainers (in a clear plastic bag if the assessment is in a prison)</li>
+                        <li>Lunch and snacks</li>
+                        <li>Comfortable shoes as you will on your feet throughout the day</li>
+                    </ul>
+                </accordion-element>
+                <accordion-element
+                        title="Vetting"
+                        subtitle="up to 12 weeks"
+                >
+                    <p>If the prison officer position is available immediately, we carry out background checks for security and identity before you begin the job. This can take up to 12 weeks.</p>
+                    <p>If a position is not available, you will be put onto a reserve list. We only begin the background checks when there is a vacancy for you.</p>
+                    <p><strong>What you will need</strong></p>
+                    <p>Sign and accept the offer of employment
+                    choose a preferred time and location for the 10 week training course once vetting is complete</p>
                 </accordion-element>
             </accordion>
-        </div>
-
-        <div class="l-full">
-            <text-image-block
-                quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
-                img-url="/img/article-0-187FC088000005DC-547_306x423 copy.jpg"
-            >
-            </text-image-block>
-        </div>
-
-        <div class="l-full">
-            <text-block
-                    main-title="What you need to apply"
-                    subtitle="Find out everything you need to know about joining the prison service"
-            >
-                <h4>Documents</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque. Cras quis faucibus nunc.</p>
-                <ol>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                    <li>Lorem ipsum dolor sit amet</li>
-                </ol>
-                <h4>Time and location</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.</p>
-                <h4>Environment</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.</p>
-            </text-block>
         </div>
 
         <div class="l-full">
