added content for the role page

--- a/src/html/role.html
+++ b/src/html/role.html
@@ -14,12 +14,12 @@
 
 
         <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
-            Want a new challenge?<br/>We've got your back.
+            Explore a career like no other
         </page-header>
 
         <role-intro
-                main-title="Prison officer: the role"
-                subtitle="Find out everything you need to know about joining the prison service"
+                main-title="About the role"
+                subtitle="Face real challenges. Get excellent benefits. Help change lives for the better."
                 position="Prison Officer"
                 salary-range="£20,905 - £32,290"
                 location="Nationwide"
@@ -30,74 +30,71 @@
 
         <tabs>
             <tab
-                    tab-title="Overview"
+                    tab-title="Skills"
                     slot="0"
             >
-                <div class="u-margin">
-                    <h3 class="common-header">Job description</h3>
-
-                    <h4 class="common-header-small">Sense of belonging</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-
-                    <h4 class="common-header-small">Do something that matters</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-
-                    <h4 class="common-header-small">Helping others</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-
-                    <h4 class="common-header-small">Personal development</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-
-                    <h4 class="common-header-small">New skills and challenges</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-
-                    <h4 class="common-header-small">Flexibility, pay and holiday</h4>
-                    <p>Based on a 37 to 39 hour week</p>
-                    <table class="u-common-table">
-                        <tr>
-                            <td>Inner London</td>
-                            <td>£29,543 to £31,014</td>
-                        </tr>
-                        <tr>
-                            <td>Outer London</td>
-                            <td>£28,064 to £31,453</td>
-                        </tr>
-                        <tr>
-                            <td>South and South East</td>
-                            <td>£25,224 to £28,456</td>
-                        </tr>
-                        <tr>
-                            <td>Elsewhere in England and Wales</td>
-                            <td>£20,751 to £21,902</td>
-                        </tr>
-                    </table>
-
-                </div>
-                <text-image-block
-                        quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
-                        img-url="http://via.placeholder.com/140x100"
+                <text-block main-title="What you need to succeed"
+                            subtitle="Face real challenges. Get excellent benefits. Help change lives for the better."
                 >
-                </text-image-block>
+
+                    <h4 class="common-header-small">Are you ready for the unexpected?</h4>
+                    <p>Every day can be different. You will need enthusiasm, determination and fast thinking to handle whatever comes your way.</p>
+
+                    <h4 class="common-header-small">Do you like helping others?</h4>
+                    <p>Being a prison officer is about treating others with respect, understanding and decency, and believing people can change.</p>
+
+                    <h4 class="common-header-small">Do you believe in fairness and justice?</h4>
+                    <p>You will need to handle situations with strength, honesty and consistency to create an environment where everyone can focus on rehabilitation.</p>
+
+                    <h4 class="common-header-small">Are you a team player?</h4>
+                    <p>You will need to be able to talk and listen to others, and take responsibility for the safety of those around you.</p>
+
+                </text-block>
+                <div class="l-half">
+                    <text-image-block
+                        quote="Life skills come in handy. It’s all about how you deal with challenging situations."
+                        quote-source="Tricia, Prison Officer, HMP The Mount"
+                        img-url="http://via.placeholder.com/140x100"
+                    >
+                    </text-image-block>
+                </div>
             </tab>
             <tab
-                    tab-title="Benefits"
-                    slot="1"
+                tab-title="Daily life"
+                slot="1"
             >
-                <div class="u-margin">
-                    <h3 class="common-header">A sense of worth</h3>
+                <text-block main-title="Life as a prison officer"
+                            subtitle="You will work with people from all kinds of backgrounds with one shared purpose – to create a safe environment where rehabilitation is encouraged."
+                >
+                    <h4 class="common-header-small">Working day</h4>
+                    <p>Your day can vary according to the type of prison, its level of security and the age of the prisoners. Duties can include:</p>
 
-                    <h4 class="common-header-small">Sense of belonging</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <ul>
+                        <li>keeping the prison secure and orderly</li>
+                        <li>carrying out search and security checks</li>
+                        <li>escorting and supervising prisoners</li>
+                        <li>helping prisoners with rehabilitation programmes</li>
+                        <li>providing support to prisoners who are vulnerable</li>
+                    </ul>
 
-                    <h4 class="common-header-small">Do something that matters</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h4 class="common-header-small">Shift hours</h4>
+                    <p>You will usually work on rolling shifts of 39 hours, including some nights, weekends and public holidays (these days are added to your holiday allowance). You will usually have the opportunity for overtime, and most prisons are open to flexible working to give you a good work-life balance.</p>
 
-                    <h4 class="common-header-small">Helping others</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                </div>
+                    <h4 class="common-header-small">Types of prison</h4>
+                    <p>You may be working with women, young people, high security prisoners or mentally disordered offenders. There are no restrictions on who can work in these prisons.</p>
+
+                    <h4 class="common-header-small">The team</h4>
+                    <p>Your team is likely to include people with diverse experience and backgrounds. You will likely form strong bonds with your colleagues as you will be have to work together to run a safe, decent prison environment.</p>
+
+                    <div class="enormous">25%</div>
+                    <p class="medium">of prison officers in the UK are <strong>female</strong></p>
+
+                </text-block>
+
                 <text-image-block class="u-no-margin"
-                        quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
-                        img-url="http://via.placeholder.com/140x100"
+                                  quote="There is no typical day, but regular activities such as getting prisoners to work and education."
+                                  quote-source="Steve, Prison Officer, HMP Norwich"
+                                  img-url="http://via.placeholder.com/140x100"
                 >
                 </text-image-block>
 
@@ -105,8 +102,100 @@
             <tab
                     tab-title="Day-to-day"
                     slot="2"
-            ></tab>
+            >
+                <text-block main-title="Rewards and benefits"
+                            subtitle="You will be recognised for your role in creating a secure environment where people can turn their lives around.">
+                    <h4 class="common-header-small">Pay</h4>
+                    <p>The starting salary for a prison officer can range from £22,396 to £32,521, depending on your location, overtime hours and additional allowances.</p>
+                    <p>Starting salary based on a 37 to 39 hour week:</p>
+                    <table class="u-common-table">
+                        <tr>
+                            <td>Inner London</td>
+                            <td>£20,751 to £21,902</td>
+                        </tr>
+                    </table>
+
+                    <h4 class="common-header-small">Holiday</h4>
+                    <p>You are entitled to 25 days paid holiday a year, plus 9 extra days for bank holidays. If you have to work over a public or bank holiday, these days are added to your overall holiday allowance.</p>
+
+                    <p>Your holiday allowance rises to 30 days after 10 years of service.</p>
+
+                    <h4 class="common-header-small">Benefits</h4>
+                    <p>You will also get a range of benefits including:</p>
+                    <ul>
+                        <li>civil service pension</li>
+                        <li>exclusive retail discounts </li>
+                        <li>childcare vouchers</li>
+                        <li>season ticket loan</li>
+                        <li>cycle to work scheme</li>
+                        <li>give as you earn</li>
+                    </ul>
+
+                    <h4 class="common-header-small">Work-life balance </h4>
+                    <p>We offer flexible working when possible. This may depend on the working patterns of the prison and is available once you have passed your 10-week training course, which must be completed full time. </p>
+
+                    <h4 class="common-header-small">Training and probation</h4>
+                    <p>After induction, you will need to pass a 10-week Prison Officer Entry Level Training (POELT) course. This can either be residential or non-residential depending on your location. You will receive full pay during training.</p>
+                    <p>The course helps you to prepare for life as a prison officer. When you pass you will receive an NVQ Level 3 Diploma in custodial care. This gives you a number of transferable skills including communication, looking after people in custody and legal knowledge.</p>
+                    <p>Training continues throughout your 12-month probationary period. You may have to complete a further 2-week residential course if you work in a high security prison.</p>
+
+                    <h4 class="common-header-small">Career development</h4>
+                    <p>You will be given further training and mentoring support throughout your career, helping you to develop skills and gain experience.</p>
+                    <p>You will have opportunities for professional qualifications, career progression, and to learn diverse things such as healthcare or dog handling.</p>
+                    <p>As you gain experience, you could progress into management positions, specialise in different roles or move into new areas such as working with vulnerable prisoners, or with mothers and babies.</p>
+
+                </text-block>
+
+                <text-image-block class="u-no-margin"
+                                  quote="I can relate the training from the classroom to what I’m experiencing on the wings."
+                                  quote-source="Scott, Prison Officer, HMP Wayland"
+                                  img-url="http://via.placeholder.com/140x100"
+                >
+                </text-image-block>
+            </tab>
+
+            <tab tab-title="Training"
+                 slot="3"
+            >
+                <text-block main-title="Support at every step"
+                            subtitle="From day one, you will be offered training and support to help you to take your career further."
+                >
+                    <h4 class="common-header-small">Induction</h4>
+                    <p>You will begin your prison officer career with an induction week where you will be assigned a mentor, meet your colleagues and learn the prison routine.</p>
+                </text-block>
+            </tab>
         </tabs>
+
+
+
+        <div class="l-full">
+            <text-block type="inlaid-text"
+                        main-title="Explore every detail of the role"
+            >
+                <a class="text-image-block__link">See the full job description</a>
+            </text-block>
+        </div>
+
+        <div class="l-full">
+            <text-block main-title="Working for HM Prison & Probation Service">
+                <p>Her Majesty's Prison and Probation Service (HMPPS), created in April 2017, oversees 121 prisons and employs over 42,000 staff. </p>
+                <p>You will be joining a team committed to improving the rehabilitation of offenders and carrying out the biggest reform of the prison system in a generation.</p>
+                <p>You will be working for an organisation that rewards performance, invests in your career development and cares about your well-being both inside and outside of work.</p>
+            </text-block>
+        </div>
+
+        <div class="l-full">
+            <text-block main-title="What do you need to apply?">
+                <ul>
+                    <li>be reasonably fit, numerate and with good eyesight</li>
+                    <li>have a right to work in the UK</li>
+                    <li>be honest, strong-minded and enjoy helping others</li>
+                </ul>
+                <p>You don’t need formal qualifications to be a prison officer, although it is a great opportunity to make use of studies such as psychology or criminology.</p>
+
+                <a class="text-block__link">How to apply to be prison officer</a>
+            </text-block>
+        </div>
 
         <div class="l-full">
             <search></search>
