added video content to apply page; added link to practice maths page;

--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -70,15 +70,15 @@
 
                 <h4>Role play</h4>
                 <p>Test yourself to see if you have the skills and characteristics to be a prison officer</p>
-                <video-player></video-player>
+                <video-player src="https://cdn1.raptmedia.com/projects/yJM-Mxl0/embed?autoplay=false&controls=overlay"></video-player>
 
                 <h4>Fitness</h4>
                 <p>You will need a reasonable level of stamina, strength and fitness to show you can be on your feet all day and handle emergencies.</p>
-                <video-player></video-player>
+                <video-player src="https://www.youtube.com/embed/ZHp-316kowU?rel=0&amp;showinfo=0"></video-player>
 
                 <h4>Numeracy</h4>
-                <p>Can you complete basic maths questions to show you can do things like a prisoner headcount?</p>
-                <video-player></video-player>
+                <p><a href="https://www.smartsurvey.co.uk/s/practicemath/">Can you complete basic maths questions to show you can do things like a prisoner headcount?</a></p>
+
             </text-block>
         </div>
 
